[UEDigitalEntity] Change oas3-tools in oas-tools.
Fix CORS in development mode.
